--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FCD47D0E4EB24DD997E7519A3DBF3D0E
+CompanyName=DarkDesire
+CopyrightNotice=Copyright Eldar Nezametdinov 2016
 
 [StartupActions]
 bAddPacks=True
