--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Main.Main
 GameDefaultMap=/Game/Maps/Main.Main
-GlobalDefaultGameMode="/Script/EscapingRoom.EscapingRoomGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/MyEscapingRoomGameMode.MyEscapingRoomGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
